feat: add title to simulate section

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -117,6 +117,7 @@
       "cardSection": {
         "currency": "Currency",
         "subtitleCard": "Choose your giving",
+        "simulateSectionTitle": "Simulate a possible result",
         "buttonTextCard": "Next",
         "buttonSubmit": "Confirm",
         "detailsSubtitle": "Giving details",
