feat: adds translation

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -129,12 +129,16 @@
         "netGivingText": "Contribuição líquida: {{netGiving}}*",
         "serviceFeesText": "Taxas de serviço: {{serviceFees}}",
         "cryptoValueText": "*A contribuição será convertida em criptomoedas ({{cryptoGivings}})",
-        "billingInformationSection": {
-          "title": "Informações de cobrança",
-          "country": "País",
-          "state": "Estado",
-          "city": "Cidade",
-          "taxId": "CPF"
+        "billingInformationPage": {
+          "title": "Sua contribuição",
+          "buttonTextCard": "Continuar",
+          "billingInformationSection": {
+            "title": "Informações de cobrança",
+            "country": "País",
+            "state": "Estado",
+            "city": "Cidade",
+            "taxId": "CPF"
+          }
         },
         "paymentInformationSection": {
           "title": "Forma de pagamento",
