--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -129,12 +129,16 @@
         "netGivingText": "Net giving: {{netGiving}}*",
         "serviceFeesText": "Service fees: {{serviceFees}}",
         "cryptoValueText": "*This giving will be converted in cryptocurrency ({{cryptoGivings}})",
-        "billingInformationSection": {
-          "title": "Billing information",
-          "country": "Country",
-          "state": "State",
-          "city": "City",
-          "taxId": "Tax ID"
+        "billingInformationPage": {
+          "title": "Your Giving",
+          "buttonTextCard": "Continue",
+          "billingInformationSection": {
+            "title": "Billing Information",
+            "country": "Country",
+            "state": "State",
+            "city": "City",
+            "taxId": "Tax ID"
+          }
         },
         "paymentInformationSection": {
           "title": "Payment method",
