--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -140,13 +140,17 @@
             "taxId": "CPF"
           }
         },
-        "paymentInformationSection": {
-          "title": "Forma de pagamento",
-          "email": "E-mail",
-          "cardNumber": "Número do cartão",
-          "cardName": "Nome impresso no cartão",
-          "cardDueDate": "Vencimento",
-          "cvv": "Código de segurança"
+        "paymentInformationPage": {
+          "title":"Sua contribuição",
+          "buttonTextCard": "Continuar",
+          "paymentInformationSection": {
+            "title": "Forma de pagamento",
+            "email": "E-mail",
+            "cardNumber": "Número do cartão",
+            "cardName": "Nome impresso no cartão",
+            "cardDueDate": "Vencimento",
+            "cvv": "Código de segurança"
+          }
         },
         "impactSimulationSection": {
           "label": "Selecione uma ONG",
