feat: add condition to show toast when is invalid network

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -165,6 +165,9 @@
       "modalSuccessTitle": "You've added {{value}} USDC to the treasury!",
       "modalSuccessDescription": "Your donation has been converted into cryptocurrencies to fund more vouchers.",
       "modalSuccessButton": "Ok"
+    },
+    "networkContext": {
+      "invalidNetworkMessage": "Connect to a valid network"
     }
   }
 }
