--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -165,6 +165,9 @@
       "modalSuccessTitle": "Você incluiu {{value}} USDC ao tesouro!",
       "modalSuccessDescription": "Sua doação foi convertida em criptomoedas para financiar mais vales.",
       "modalSuccessButton": "Ok"
+    },
+    "networkContext": {
+      "invalidNetworkMessage": "Conecte-se a uma rede válida"
     }
   }
 }
