refactor: changes button copy

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -123,7 +123,7 @@
         "currency": "Currency",
         "subtitleCard": "Choose your giving",
         "simulateSectionTitle": "Simulate a possible result",
-        "buttonTextCard": "Next",
+        "buttonTextCard": "Proceed to Checkout",
         "buttonSubmit": "Confirm",
         "detailsSubtitle": "Giving details",
         "netGivingText": "Net giving: {{netGiving}}*",
