feat: adjust routes to giving page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -44,7 +44,7 @@
     "menu": {
       "impactPageTitle": "Impact",
       "causesPageTitle": "Causes",
-      "treasurePageTitle": "Treasure"
+      "givingPageTitle": "Giving"
     }
   },
   "layouts": {
