--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -44,7 +44,7 @@
     "menu": {
       "impactPageTitle": "Impacto",
       "causesPageTitle": "Causas",
-      "treasurePageTitle": "Tesouro"
+      "givingPageTitle": "Contribuir"
     }
   },
   "layouts": {
